# mike-t-4b46-ai-news-01

./: .env.example  .gitignore  .plan  .prettierignore  Cargo.toml  PRODUCT.md  README.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  playwright.config.ts  prettier.config.mjs  prisma.config.ts  tailwind.config.ts  vitest.config.ts
e2e/: core-flow.spec.ts
prisma/: schema.prisma
prisma/migrations/20260611043000_init/: migration.sql
prisma/migrations/20260611043500_user_account_session_models/: migration.sql
prisma/migrations/20260611050500_subspace_model/: migration.sql
prisma/migrations/20260611052000_tag_model/: migration.sql
prisma/migrations/20260611053000_post_model/: migration.sql
scripts/: start-coordinated.mjs  validate-env.mjs
src-rs/: admin.rs  auth.rs  authorization.rs  bot_posts.rs  config.rs  db.rs  main.rs  models.rs  posts.rs  state.rs  storage.rs  subspaces.rs  tags.rs  uploads.rs
src/app/: globals.css  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
src/app/(admin)/admin/: error.tsx  page.tsx
src/app/(auth)/sign-in/: page.tsx
src/app/(public)/: error.tsx  page.tsx
src/app/(public)/s/[slug]/: error.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/(public)/s/[slug]/[postId]/: error.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/(public)/subspaces/: page.tsx
src/app/(public)/t/[slug]/: error.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/(public)/tags/: page.tsx
src/app/actions/: posts.ts  subspaces.ts  tags.ts
src/app/api/admin/login/: route.ts
src/app/api/admin/logout/: route.ts
src/app/api/admin/session/: route.ts
src/app/api/auth/login/: route.ts
src/app/api/auth/logout/: route.ts
src/app/api/auth/session/: route.ts
src/app/api/files/: route.ts
src/app/api/uploads/: route.ts
src/components/: admin-content-tabs.tsx  admin-login-form.tsx  markdown-media-uploader.tsx  pagination-controls.tsx  post-editor-panel.tsx  route-state-panel.tsx  session-controls.tsx  site-header.tsx  subspace-admin-panel.tsx  tag-admin-panel.tsx
src/lib/: admin-api.ts  admin-auth.ts  auth-redirect.ts  auth.ts  authorization.ts  db.ts  env.ts  markdown.ts  object-storage.ts  page-metadata.ts  pagination.ts  session-cookies.ts  subspace-slugs.ts
tests/: auth.test.ts  authorization.test.ts  markdown.test.ts  pagination.test.ts  setup.ts  subspace-slugs.test.ts
