[package]
name = "mike-t-4b46-ai-news-01-api"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mike-t-4b46-ai-news-01-api"
path = "src-rs/main.rs"

[dependencies]
axum = "0.8"
chrono = { version = "=0.4.38", default-features = false, features = ["clock", "serde"] }
sqlx = { version = "=0.7.4", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
